# template-avr

./: .gitignore  CMakeLists.txt  CompilerWarnings.cmake  README.md  conanfile.py
app/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/src/: core.cpp
core/test/: utest_core.cpp
somelib/: CMakeLists.txt
